--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
         <div class="w3-row-padding w3-center ">
             <div class="w3-col m4" id="adjust">
-                <a target="_blank" href="https://cryptic-coast-10586.herokuapp.com/"><img src="assets/images/newimage.png" style="width:100%" class="w3-hover-opacity" href="" alt="MedGram"></a>
+                <a target="_blank" href="https://cryptic-coast-10586.herokuapp.com/"><img src="assets/images/medic.png" style="width:100%" class="w3-hover-opacity" href="" alt="MedGram"></a>
                 <h5>MedGram Team Project</h5>
                 <a target="_blank" href="https://github.com/jamesb575/medGram">view this code on GitHub</p></a>
             </div>
